--- a/wordpress-deployment.yaml
+++ b/wordpress-deployment.yaml
@@ -1,3 +1,5 @@
+# Service
+# https://kubernetes.io/docs/concepts/services-networking/service/
 apiVersion: v1
 kind: Service
 metadata:
@@ -7,11 +9,18 @@ metadata:
 spec:
   ports:
     - port: 80
+  # https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/#label-selectors
+  # app == wordpress && tier == frontend
   selector:
     app: wordpress
     tier: frontend
+  # https://kubernetes.io/docs/concepts/services-networking/service/#loadbalancer
   type: LoadBalancer
 ---
+# PersistentVolumeClaim
+# https://kubernetes.io/docs/concepts/storage/persistent-volumes/#persistentvolumeclaims
+# PersistentVolumeのPodが作成される
+# PersistentVolumeClaimは作成されたPersistentVolumeを紐付けする
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -19,12 +28,16 @@ metadata:
   labels:
     app: wordpress
 spec:
+  # spec.accessModes==ReadWriteOnce the volume can be mounted as read-write by a single node
+  # 単一のノードから読み書きできる
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 20Gi
 ---
+# Deployment
+# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
@@ -32,10 +45,15 @@ metadata:
   labels:
     app: wordpress
 spec:
+  # https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/#label-selectors
+  # app == wordpress && tier == mysqlS
   selector:
     matchLabels:
       app: wordpress
       tier: frontend
+  # spec.strategy.type==Recreate
+  # All existing Pods are killed before new ones are created when .spec.strategy.type==Recreate.
+  # 新しいPodが作成されると古いPodは削除される
   strategy:
     type: Recreate
   template:
@@ -44,12 +62,16 @@ spec:
         app: wordpress
         tier: frontend
     spec:
+      # wordpress:4.8-apacheのimageから1つのコンテナを含んだPodを起動する
+      # https://hub.docker.com/_/wordpress/
       containers:
       - image: wordpress:4.8-apache
         name: wordpress
         env:
+        # mysql-deployment.yamlで作成されたPodがdatabaseのhost名
         - name: WORDPRESS_DB_HOST
           value: wordpress-mysql
+        # kubectl create secretで作成したパスワードを参照する
         - name: WORDPRESS_DB_PASSWORD
           valueFrom:
             secretKeyRef:
@@ -58,9 +80,11 @@ spec:
         ports:
         - containerPort: 80
           name: wordpress
+        # PersistentVolumeClaimで作成したVolumeをマウントする
         volumeMounts:
         - name: wordpress-persistent-storage
           mountPath: /var/www/html
+      # PersistentVolumeClaimで作成済み
       volumes:
       - name: wordpress-persistent-storage
         persistentVolumeClaim:
